tests/ui/type-alias-impl-trait/inference-cycle.stderr
error[E0391]: cycle detected when computing type of opaque `m::Foo::{opaque#0}`
  --> $DIR/inference-cycle.rs:5:20
   |
LL |     pub type Foo = impl std::fmt::Debug;
   |                    ^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires type-checking `m::bar`...
  --> $DIR/inference-cycle.rs:16:9
   |
LL |         is_send(foo()); // Today: error
   |         ^^^^^^^
   = note: ...which requires evaluating trait selection obligation `m::Foo: core::marker::Send`...
   = note: ...which again requires computing type of opaque `m::Foo::{opaque#0}`, completing the cycle
note: cycle used when computing type of `m::Foo::{opaque#0}`
  --> $DIR/inference-cycle.rs:5:20
   |
LL |     pub type Foo = impl std::fmt::Debug;
   |                    ^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error[E0391]: cycle detected when computing type of opaque `m::Foo::{opaque#0}`
  --> $DIR/inference-cycle.rs:5:20
   |
LL |     pub type Foo = impl std::fmt::Debug;
   |                    ^^^^^^^^^^^^^^^^^^^^
   |
note: ...which requires type-checking `m::bar`...
  --> $DIR/inference-cycle.rs:15:5
   |
LL |     pub fn bar() {
   |     ^^^^^^^^^^^^
   = note: ...which again requires computing type of opaque `m::Foo::{opaque#0}`, completing the cycle
note: cycle used when computing type of `m::Foo::{opaque#0}`
  --> $DIR/inference-cycle.rs:5:20
   |
LL |     pub type Foo = impl std::fmt::Debug;
   |                    ^^^^^^^^^^^^^^^^^^^^
   = note: see https://rustc-dev-guide.rust-lang.org/overview.html#queries and https://rustc-dev-guide.rust-lang.org/query.html for more information

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0391`.
